// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment details page should match the snapshot - Charge query param 1`] = `
<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    style="max-width: 1032px;"
  >
    <div
      class="components-card is-size-medium css-1xs3c37-CardUI e1q7k77g0"
    >
      <div
        class="components-card__body is-size-medium css-xmjzce-BodyUI e1q7k77g3"
      >
        <div
          class="payment-details-summary"
        >
          <div
            class="payment-details-summary__section"
          >
            <p
              class="payment-details-summary__amount"
            >
              <span
                aria-busy="true"
                class="is-loadable-placeholder"
              >
                Amount placeholder
              </span>
            </p>
            <div
              class="payment-details-summary__breakdown"
            >
              
              <p>
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  Fee amount
                </span>
              </p>
              
              <p>
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  Net amount
                </span>
              </p>
            </div>
          </div>
          <div
            class="payment-details-summary__section"
          >
            <div
              class="payment-details-summary__id"
            >
              <span
                aria-busy="true"
                class="is-loadable-placeholder"
              >
                Payment ID: pi_xxxxxxxxxxxxxxxxxxxxxxxx
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="components-flex components-card__footer is-size-medium e1q7k77g4 css-oliaol-Flex-FooterUI eboqfv50"
      >
        <span
          aria-busy="true"
          class="is-loadable-placeholder is-block"
        >
          <p
            style="line-height: 4;"
          >
            Block placeholder
          </p>
        </span>
      </div>
    </div>
    <div
      class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
    >
      <div
        class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
      >
        <span
          aria-busy="true"
          class="is-loadable-placeholder"
        >
          Payment method
        </span>
      </div>
      <div
        class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
      >
        <div
          class="payment-method-details"
        >
          <div
            class="payment-method-details__column"
          >
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Number
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  •••• 
                  4242
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Fingerprint
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  fingerprint
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Expires
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  12 / 2099
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Type
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  Visa credit card
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  ID
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  pm_mock
                </span>
              </p>
            </div>
          </div>
          <div
            class="payment-method-details__column"
          >
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Owner
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  First Name
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Owner email
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  email@example.com
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Address
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  <span>
                    Line 1 Street
                    <br />
                    Line 2
                    <br />
                    City, CA 99999
                  </span>
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Origin
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  United States of America
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  CVC check
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  Passed
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Street check
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  Passed
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder is-block"
                >
                  Zip check
                </span>
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  Passed
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Payment details page should match the snapshot - Payment Intent query param 1`] = `
<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    style="max-width: 1032px;"
  >
    <div
      class="components-card is-size-medium css-1xs3c37-CardUI e1q7k77g0"
    >
      <div
        class="components-card__body is-size-medium css-xmjzce-BodyUI e1q7k77g3"
      >
        <div
          class="payment-details-summary"
        >
          <div
            class="payment-details-summary__section"
          >
            <p
              class="payment-details-summary__amount"
            >
              $1,500.00
              <span
                class="payment-details-summary__amount-currency"
              >
                usd
              </span>
              <span
                class="chip chip-light"
              >
                Paid
              </span>
            </p>
            <div
              class="payment-details-summary__breakdown"
            >
              
              <p>
                Fee: 
                -$74.00
              </p>
              
              <p>
                Net: 
                $1,426.00 USD
              </p>
            </div>
          </div>
          <div
            class="payment-details-summary__section"
          >
            <div
              class="payment-details-summary__id"
            >
              Payment ID: 
              pi_mock
            </div>
          </div>
        </div>
      </div>
      <div
        class="components-flex components-card__footer is-size-medium e1q7k77g4 css-oliaol-Flex-FooterUI eboqfv50"
      >
        <ul
          class="woocommerce-list woocommerce-list--horizontal"
          role="menu"
        >
          <li
            class="woocommerce-list__item"
          >
            <div
              class="woocommerce-list__item-inner"
            >
              <div
                class="woocommerce-list__item-text"
              >
                <span
                  class="woocommerce-list__item-title"
                >
                  Date
                </span>
                <span
                  class="woocommerce-list__item-content"
                >
                  Jun 22, 2022, 2:16pm
                </span>
              </div>
            </div>
          </li>
          <li
            class="woocommerce-list__item"
          >
            <div
              class="woocommerce-list__item-inner"
            >
              <div
                class="woocommerce-list__item-text"
              >
                <span
                  class="woocommerce-list__item-title"
                >
                  Customer
                </span>
                <span
                  class="woocommerce-list__item-content"
                >
                  <a
                    data-link-type="wc-admin"
                    href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions&search%5B0%5D=First%20Name%20(email%40example.com)"
                  >
                    First Name
                  </a>
                </span>
              </div>
            </div>
          </li>
          <li
            class="woocommerce-list__item"
          >
            <div
              class="woocommerce-list__item-inner"
            >
              <div
                class="woocommerce-list__item-text"
              >
                <span
                  class="woocommerce-list__item-title"
                >
                  Order
                </span>
                <span
                  class="woocommerce-list__item-content"
                >
                  <span>
                    –
                  </span>
                </span>
              </div>
            </div>
          </li>
          <li
            class="woocommerce-list__item"
          >
            <div
              class="woocommerce-list__item-inner"
            >
              <div
                class="woocommerce-list__item-text"
              >
                <span
                  class="woocommerce-list__item-title"
                >
                  Payment method
                </span>
                <span
                  class="woocommerce-list__item-content"
                >
                  <span
                    class="payment-method-details"
                  >
                    <span
                      class="payment-method__brand payment-method__brand--visa"
                    />
                     •••• 
                    4242
                  </span>
                </span>
              </div>
            </div>
          </li>
          <li
            class="woocommerce-list__item"
          >
            <div
              class="woocommerce-list__item-inner"
            >
              <div
                class="woocommerce-list__item-text"
              >
                <span
                  class="woocommerce-list__item-title"
                >
                  Risk evaluation
                </span>
                <span
                  class="woocommerce-list__item-content"
                >
                  –
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
    >
      <div
        class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
      >
        Timeline
      </div>
      <div
        class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
      >
        <div
          class="woocommerce-timeline"
        >
          <p
            class="timeline_no_events"
          >
            No data to display
          </p>
        </div>
      </div>
    </div>
    <div
      class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
    >
      <div
        class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
      >
        Payment method
      </div>
      <div
        class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
      >
        <div
          class="payment-method-details"
        >
          <div
            class="payment-method-details__column"
          >
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Number
              </h4>
              <p
                class="payment-method-detail__value"
              >
                •••• 
                4242
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Fingerprint
              </h4>
              <p
                class="payment-method-detail__value"
              >
                fingerprint
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Expires
              </h4>
              <p
                class="payment-method-detail__value"
              >
                12 / 2099
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Type
              </h4>
              <p
                class="payment-method-detail__value"
              >
                Visa credit card
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                ID
              </h4>
              <p
                class="payment-method-detail__value"
              >
                pm_mock
              </p>
            </div>
          </div>
          <div
            class="payment-method-details__column"
          >
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Owner
              </h4>
              <p
                class="payment-method-detail__value"
              >
                First Name
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Owner email
              </h4>
              <p
                class="payment-method-detail__value"
              >
                email@example.com
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Address
              </h4>
              <p
                class="payment-method-detail__value"
              >
                <span>
                  Line 1 Street
                  <br />
                  Line 2
                  <br />
                  City, CA 99999
                </span>
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Origin
              </h4>
              <p
                class="payment-method-detail__value"
              >
                United States of America
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                CVC check
              </h4>
              <p
                class="payment-method-detail__value"
              >
                Passed
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Street check
              </h4>
              <p
                class="payment-method-detail__value"
              >
                Passed
              </p>
            </div>
            <div
              class="payment-method-detail"
            >
              <h4
                class="payment-method-detail__label"
              >
                Zip check
              </h4>
              <p
                class="payment-method-detail__value"
              >
                Passed
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
